# gazprom_test_task

./: docker-compose.yml  pyproject.toml  requirements-backend.txt  requirements-celery.txt
config/: db.env  s3.env
ds/: SFDDD_model.npz  ak.ipynb  model.keras
ds/.ipynb_checkpoints/: ak-checkpoint.ipynb
src/prediction_app/api/: inference_router.py  lifespan.py  main.py  prediction_router.py
src/prediction_app/api/config/: gunicorn.conf.py  sgi_config.py
src/prediction_app/db/: config.py  connector.py  model.py
src/prediction_app/domain/: custom_inference.py  model.py
src/prediction_app/storage/: config.py  session.py
src/prediction_app/tasks/: main.py  task.py
src/prediction_app/tasks/config/: celery.py  redis.py
